--- a/style/main.css
+++ b/style/main.css
@@ -333,40 +333,40 @@
     .tile.tile-2 .tile-inner {
       background:  url("2.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
     background-size: cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
     .tile.tile-4 .tile-inner {
       background: url("4.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size: cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
     .tile.tile-8 .tile-inner {
       background: url("8.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size:cover;
     }
     .tile.tile-16 .tile-inner {
       background: url("16.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size:cover; }
     .tile.tile-32 .tile-inner {
       background: url("32.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size:contain; }
     .tile.tile-64 .tile-inner {
       background: url("64.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size:contain; }
     .tile.tile-128 .tile-inner {
       background: url("128.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size: contain;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
       font-size: 45px; }
@@ -376,7 +376,7 @@
     .tile.tile-256 .tile-inner {
       background: url("256.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size: contain;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
       font-size: 45px; }
@@ -386,7 +386,7 @@
     .tile.tile-512 .tile-inner {
       background: url("512.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size:contain;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
       font-size: 45px; }
@@ -396,7 +396,7 @@
     .tile.tile-1024 .tile-inner {
       background: url("1024.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size:contain;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
       font-size: 35px; }
@@ -406,7 +406,7 @@
     .tile.tile-2048 .tile-inner {
       background: url("2048.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      /*background-position: center;*/
       background-size: contain;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
       font-size: 35px; }
