--- a/style/main.css
+++ b/style/main.css
@@ -345,7 +345,7 @@
     .tile.tile-8 .tile-inner {
       background: url("8.jpg");
       background-repeat: no-repeat;
-      /*background-position: center;*/
+      background-position: center;
       background-size:cover;
     }
     .tile.tile-16 .tile-inner {
@@ -357,17 +357,17 @@
       background: url("32.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size:contain; }
+      background-size:cover; }
     .tile.tile-64 .tile-inner {
       background: url("64.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size:contain; }
+      background-size:cover; }
     .tile.tile-128 .tile-inner {
       background: url("128.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size: contain;
+      background-size: cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
       font-size: 45px; }
       @media screen and (max-width: 520px) {
@@ -377,7 +377,7 @@
       background: url("256.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size: contain;
+      background-size: cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
       font-size: 45px; }
       @media screen and (max-width: 520px) {
@@ -387,7 +387,7 @@
       background: url("512.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size:contain;
+      background-size:cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
       font-size: 45px; }
       @media screen and (max-width: 520px) {
@@ -397,7 +397,7 @@
       background: url("1024.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size:contain;
+      background-size:cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
       font-size: 35px; }
       @media screen and (max-width: 520px) {
@@ -407,7 +407,7 @@
       background: url("2048.jpg");
       background-repeat: no-repeat;
       /*background-position: center;*/
-      background-size: contain;
+      background-size: cover;
       box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
       font-size: 35px; }
       @media screen and (max-width: 520px) {
@@ -770,11 +770,7 @@
     .tile.tile-position-4-4 {
       -webkit-transform: translate(202px, 202px);
       -moz-transform: translate(202px, 202px);
-  <<<<<<< HEAD
-      /*-ms-transform: translate(202px, 202px);*/
-  =======
       -ms-transform: translate(202px, 202px);
-  >>>>>>> 837ca51b6f254c416cb74b6a1baa1bb7cc7e6fd1
       transform: translate(202px, 202px); }
 
     .tile .tile-inner {
